css/style.css
/* ... */
/* Back */
#back {
    cursor: pointer;
    outline: none !important;
    
    background: url(../back.png) center / contain no-repeat;
    opacity: 0.3;

    position: fixed;
    top: 67.5px; 
    left: 8.5vw; 
    width: 0.8em;
    height: 2em;
    z-index: 99;
    
    transition: 0.28s;
}
#back:hover {
    opacity: 1;
    transition: 0.28s;
}
#back.no-display {
    opacity: 0;
}


/* Responsive Modifications */
@media screen and (max-width: 1275px) {
    .project {
        display: inline-block;
        position: relative;
        height: 35vw;
        width: 35vw;
        border-radius: 0.75vw;
        padding: 2vw;
        overflow: hidden;
        margin: 2vw;

        color: #FFFFFF;
        text-align: center;
    }
    .ideocolab {
        padding-left: 0;
    }
    #exploration {
        margin-top: 1.5em;
    }
    footer {
        margin-top: 3em;
    }
    .links {
        display: inline-block;
        float: left;
    }
}

@media screen and (max-width: 450px) {
    html {
        padding: 1em;
    }
    .zklogo {
        height: 10vw;
    }
    #name {
        font-size: 4.5vw;
        display: none;
    }
    .menu-icon {
        display: inline-block;
    }
    .content-mobile {
        display: block;
    }
    .content-web {
        display: none;
    }
    h3 {
        font-size: 0.75em;
    }
    h4 {
        font-size: 1em;
    }
    .option {
        font-size: 4vw;
        margin: 2.5vw;
    }
    .title {
        font-size: 3em;
    }
    .projectimg {
        height: auto;
    }
    .project {
        display: inline-block;
        position: relative;
        height: 85vw;
        width: 85vw;
        border-radius: 2vw;
        padding: 4.5vw;
        overflow: hidden;
        margin: 2vw;

        color: #FFFFFF;
        text-align: center;
    }
    .project h2 {
        font-size: 10vw;
        margin-top: 50vw;
    }
    .caption {
        font-size: 3vw;
    }
    .ideocolab {
        padding-left: 0;
    }
    .respondtitle {
        width: 100%;
    }
    .ideocolabtitle {
        width: 100%;
    }
    .tinttitle {
        width: 100%;
    }
    .earbudtitle {
        width: 100%;
    }
    .nalptitle {
        width: 100%;
    }
    .designstitle {
        width: 100%;
    }
    #screenshots {
        margin-top: 2em;
    }
    .nalp img {
        margin-top: 10vw;
    }
    .earbud img {
        margin-top: 3vw;
    }
    .designs img {
        margin-top: 4vw;
    }
    .travel h2 {
        font-size: 15vw;
        margin-top: 20vw;
    }
    #exploration {
        margin-top: 1.5em;
    }
    .city {
        font-size: 0.75em;
    }
    .photo {
        height: 45vw;
        margin: 1em;
        margin-bottom: 5em;
        margin-left: 0;
    }
    footer {
        padding-bottom: 2em;
    }
    footer h4 {
        font-size: 1.25em;
    }
    i {
        transform: scale(1.25);
        margin-right: 5vw;
    }
    .links {
        display: inline-block;
        float: left;
    }
    #scrollTop {
        bottom: 57.5px; 
    }
    #back {
        display: none;
    }
}

/* Animations */
@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(0.05%);   
  }
  100% {
    opacity: 1;
    transform: translateY(0); 
  }
}

